#
# Sodipodi svg wrapper
# Author: Lauris Kaplinski <lauris@ariman.ee>
# Most code is actually written by Raph Levien
#
# Implements svg interpretation of xml tree
#

INCLUDES = \
	-I$(includedir)

noinst_LIBRARIES = libspsvg.a

libspsvg_a_SOURCES = \
	svg-length.c svg-length.h \
	svg-color.c svg-color.h \
	svg-affine.c svg-affine.h \
	svg-path.c svg-path.h \
	gnome-canvas-bpath-util.c gnome-canvas-bpath-util.h
