#
# Sodipodi xml wrapper
# Author: Lauris Kaplinski <lauris@ariman.ee>
#
# Implements xml backbone of sodipodi document. In future will be
# repaced with (wrapper of?) DOM
#

INCLUDES = \
	-I$(includedir)

noinst_LIBRARIES = libspxml.a

libspxml_a_SOURCES = \
	repr.c repr.h \
	repr-util.c repr-util.h \
	repr-io.c repr-io.h \
	repr-css.c repr-css.h

