#
# Sodipodi GnomeCanvas objects
# Author: Lauris Kaplinski <lauris@ariman.ee>
#
# Here are major objects, used for displaying things
#

INCLUDES = \
	-I$(includedir) \
	$(SODIPODI_CFLAGS)

noinst_LIBRARIES = libarena.a

libarena_a_SOURCES = \
	sp-arena.c sp-arena.h \
	sp-arena-item.c sp-arena-item.h

